--- a/nhsbugs/templates/about.html
+++ b/nhsbugs/templates/about.html
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td>Robin Winslow</td>
-            <td>&nbsp;</td>
+            <td><a href="http://robinwinslow.co.uk">Robinwinslow.co.uk</a></td>
             <td><a href="https://github.com/nottrobin">github.com/nottrobin</a></td>
             <td><a href="https://twitter.com/nottrobin">@nottrobin</a></td>
         </tr>
