--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -297,6 +297,7 @@ nav {
     padding-right: 20px;
 }
 .main>section:first-of-type+section {
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding-left: 20px;
     border-left: 2px solid #ccc;
@@ -308,6 +309,7 @@ nav {
 footer {
     font-size: 0.9em;
     color: #666666;
+    overflow: hidden;
 }
 footer nav {
     float: left;
