added js list filtering for hospital list

--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="{{ MEDIA_URL }}/css/style.css">
 
   <script src="{{ MEDIA_URL }}/js/libs/modernizr-2.5.3.min.js"></script>
+  <script src="{{ MEDIA_URL }}/js/libs/jquery-1.7.1.min.js"></script>
+  <script src="{{ MEDIA_URL }}/js/libs/jquery.quicksearch.js"></script>
   {% block extra_head %}
   {% endblock %}
 </head>
