Added fault correction checklist to footer

--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -72,6 +72,7 @@
         <nav>
             <ul>
                 <li><a href="/about/">About</a></li>
+                <li><a href="http://checklisthq.com/checklist/1"><img src="{{ MEDIA_URL }}/img/cl_logo.png">Fault correction checklist</a></li>
             </ul>
         </nav>
         <p class="legal">All content &copy; nhsbugs.net unless otherwise stated</p>
