--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -314,6 +314,12 @@ footer {
 footer nav {
     float: left;
 }
+footer nav img {
+    height: 20px;
+    vertical-align: middle;
+    margin-right: 5px;
+    margin-top: -3px;
+}
 
 .meta {
     float: right;
